more spacing fixes

--- a/style1.css
+++ b/style1.css
@@ -39,7 +39,7 @@ font-family: 'Lato', sans-serif;
 
 #letterformFree {
 	position: absolute;
-	top: 0px;
+	top: 20px;
 	left: 0px;
 	color: white;
 	font-size: 700px;
